# lucerna-intent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/core/: __init__.py
src/core/models/: __init__.py  intents.py
src/core/services/: __init__.py  intent_canonicalizer.py  intent_service.py
src/core/utils/: env.py
src/service_host/: __init__.py  main.py
