[project]
name = "lucerna-intent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ted Ly",email = "ted.ly@ansarada.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "lucerna_intent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
